# SoSe-25-SWE

./: .pdm-python  Leistungstest_Grunddatei  Leistungstest_Grunddatei.py  README.md  main.py  my_functions.py  pyproject.toml
